--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="overlap-9"><img class="maki-arrow-3" src="img/maki-arrow-1.svg" /></div>
         <div class="overlap-10">
           <div class="overlap-8">
-            <img class="rectangle-6" src="img/rectangle-24.png" />
+            <img class="rectangle-6" src="img/headlight_vw_polo_typ_6n_01.webp" />
             <div class="ellipse-12"></div>
             <div class="ellipse-13"></div>
             <div class="ellipse-14"></div>
